--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -14,13 +14,45 @@
   align-items: center;
   justify-content: center;
 }
+
+.InputAreaBig > input {
+  margin-right: 2rem;
+  width: 25rem;
+  border-radius: 5px;
+  outline-width: 0;
+  height: 4rem;
+  border: 1px solid var(--clr-grey-8);
+}
 .searchInputArea > input {
   margin-right: 2rem;
   width: 10rem;
   border-radius: 5px;
   outline-width: 0;
   height: 4rem;
+  border: 1px solid var(--clr-grey-8);
 }
+
 .searchInputArea > input:focus {
+  border: 1px solid var(--clr-primary);
+}
+
+.InputArea {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.InputArea > input,
+.InputArea > button {
+  margin-bottom: 2rem;
+  margin-right: 2rem;
+  /* padding: 10px; */
+  width: 10rem;
+  border-radius: 5px;
+  outline-width: 0;
+  height: 4rem;
+  border: 1px solid var(--clr-grey-8);
+}
+
+.InputArea > input:focus {
   border: 1px solid var(--clr-primary);
 }
